--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -7,9 +7,18 @@ html
         meta(name="viewport", content="width=device-width, initial-scale=1")
         link(rel="stylesheet", href="/css/style.css")
     body    
-        h1 Contacts
-        .cards 
-            each contact in data
-                .card 
-                    h2.card__name #{contact.properties.name}
-                    p.card__email #{contact.properties.training_topic}
+        h1 Trainings Table
+        a(href="/") Home
+
+        table
+            thead
+                tr
+                    th Name
+                    th Training Topic
+                    th Start Date
+            tbody
+                each contact in data
+                    tr
+                        td #{contact.properties.name}
+                        td #{contact.properties.training_topics}
+                        td #{contact.properties.training_start_date}
