Updated link to update route on homepage

--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -8,7 +8,7 @@ html
         link(rel="stylesheet", href="/css/style.css")
     body    
         h1 Trainings Table
-        a(href="/") Home
+        a(href="/update-trainings") Add to this table
 
         table
             thead
